// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeader with time column renders correctly 1`] = `
<tr
  class="kbnDocTableHeader"
  data-test-subj="docTableHeader"
>
  <th
    style="width: 24px;"
  />
  <th
    data-test-subj="docTableHeaderField"
  >
    <span
      data-test-subj="docTableHeader-time"
    >
      Time
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Sort time descending"
          class="fa fa-sort-up"
          data-test-subj="docTableHeaderFieldSort_time"
        />
      </span>
    </span>
  </th>
  <th
    data-test-subj="docTableHeaderField"
  >
    <span
      data-test-subj="docTableHeader-first"
    >
      first
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Remove first column"
          class="fa fa-remove kbnDocTableHeader__move"
          data-test-subj="docTableRemoveHeader-first"
        />
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move first column to the right"
          class="fa fa-angle-double-right kbnDocTableHeader__move"
          data-test-subj="docTableMoveRightHeader-first"
        />
      </span>
    </span>
  </th>
  <th
    data-test-subj="docTableHeaderField"
  >
    <span
      data-test-subj="docTableHeader-middle"
    >
      middle
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Remove middle column"
          class="fa fa-remove kbnDocTableHeader__move"
          data-test-subj="docTableRemoveHeader-middle"
        />
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move middle column to the left"
          class="fa fa-angle-double-left kbnDocTableHeader__move"
          data-test-subj="docTableMoveLeftHeader-middle"
        />
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move middle column to the right"
          class="fa fa-angle-double-right kbnDocTableHeader__move"
          data-test-subj="docTableMoveRightHeader-middle"
        />
      </span>
    </span>
  </th>
  <th
    data-test-subj="docTableHeaderField"
  >
    <span
      data-test-subj="docTableHeader-last"
    >
      last
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Remove last column"
          class="fa fa-remove kbnDocTableHeader__move"
          data-test-subj="docTableRemoveHeader-last"
        />
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move last column to the left"
          class="fa fa-angle-double-left kbnDocTableHeader__move"
          data-test-subj="docTableMoveLeftHeader-last"
        />
      </span>
    </span>
  </th>
</tr>
`;

exports[`TableHeader without time column renders correctly 1`] = `
<tr
  class="kbnDocTableHeader"
  data-test-subj="docTableHeader"
>
  <th
    style="width: 24px;"
  />
  <th
    data-test-subj="docTableHeaderField"
  >
    <span
      data-test-subj="docTableHeader-first"
    >
      first
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Remove first column"
          class="fa fa-remove kbnDocTableHeader__move"
          data-test-subj="docTableRemoveHeader-first"
        />
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move first column to the right"
          class="fa fa-angle-double-right kbnDocTableHeader__move"
          data-test-subj="docTableMoveRightHeader-first"
        />
      </span>
    </span>
  </th>
  <th
    data-test-subj="docTableHeaderField"
  >
    <span
      data-test-subj="docTableHeader-middle"
    >
      middle
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Remove middle column"
          class="fa fa-remove kbnDocTableHeader__move"
          data-test-subj="docTableRemoveHeader-middle"
        />
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move middle column to the left"
          class="fa fa-angle-double-left kbnDocTableHeader__move"
          data-test-subj="docTableMoveLeftHeader-middle"
        />
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move middle column to the right"
          class="fa fa-angle-double-right kbnDocTableHeader__move"
          data-test-subj="docTableMoveRightHeader-middle"
        />
      </span>
    </span>
  </th>
  <th
    data-test-subj="docTableHeaderField"
  >
    <span
      data-test-subj="docTableHeader-last"
    >
      last
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Remove last column"
          class="fa fa-remove kbnDocTableHeader__move"
          data-test-subj="docTableRemoveHeader-last"
        />
      </span>
      <span
        class="euiToolTipAnchor"
      >
        <button
          aria-label="Move last column to the left"
          class="fa fa-angle-double-left kbnDocTableHeader__move"
          data-test-subj="docTableMoveLeftHeader-last"
        />
      </span>
    </span>
  </th>
</tr>
`;
